--- a/src/main/resources/locale.yml
+++ b/src/main/resources/locale.yml
@@ -1,6 +1,7 @@
-no-disguise-permission: "&6You do not have access to this disguise, to use purchase at &aMyServer.net"
-click-to-use-disguise: "&eClick to use &6%entity% &edisguise."
-remove-disguise: "&cRemove your &4%entity% disguise."
-now-disguised: "&eYou are now disguised as a &6%entity%"
+no-disguise-permission: "&6You do not have access to this disguise, to use purchase at &aMyServer.net&6."
+click-to-use-disguise: "&eClick to use &6%entity% &edisguise&e."
+remove-disguise: "&cRemoved your &4%entity% &cdisguise."
+now-disguised: "&eYou are now disguised as a(n) &6%entity%&e."
 disguise-display-name: "&6%entity% &eDisguise"
 disguise-gui-title: "&bEMC &3Disguises"
+disguise-exit-button: "&cExit."
