--- a/src/main/resources/locale.yml
+++ b/src/main/resources/locale.yml
@@ -4,4 +4,9 @@ remove-disguise: "&cRemoved your &4%entity% &cdisguise."
 now-disguised: "&eYou are now disguised as a(n) &6%entity%&e."
 disguise-display-name: "&6%entity% &eDisguise"
 disguise-gui-title: "&bEMC &3Disguises"
-disguise-exit-button: "&cExit."
+disguise-gui-exit-button: "&cExit."
+disguise-gui-toggle-nametag-button: "&cToggle Nametag."
+disguise-toggle-nametag: "&eDisguise nametag has been toggled &6%on_off%&e."
+disguise-command-invalid-disguise: "&cThat is not a valid disguise!"
+undisguise-command-not-wearing-disguise: "&cYou are not wearing a disguise!"
+disguise-remove-because-attacked: "&cYou were attacked and your &4%entity% &cdisguise was removed!"
