--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@ author: Kenny
 main: me.kenny.emcdisguise.EMCDisguise
 commands:
   disguise:
-    aliases: [dis]
+    aliases: [d, dis]
     description: Disguises you.
   undisguise:
     description: Undisguises you.
