Added undisguise alias

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,4 +8,5 @@ commands:
     aliases: [d, dis]
     description: Disguises you.
   undisguise:
+    aliases: [undis]
     description: Undisguises you.
